--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,34 @@ flutter:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/africa/africa.png
+    - assets/images/africa/2x/africa.png
+    - assets/images/africa/3x/africa.png
+    - assets/images/america/america.png
+    - assets/images/america/2x/america.png
+    - assets/images/america/3x/america.png
+    - assets/images/asia/asia.png
+    - assets/images/asia/2x/asia.png
+    - assets/images/asia/3x/asia.png
+    - assets/images/back_arrow/back_arrow.png
+    - assets/images/back_arrow/2x/back_arrow.png
+    - assets/images/back_arrow/3x/back_arrow.png
+    - assets/images/europe/europe.png
+    - assets/images/europe/2x/europe.png
+    - assets/images/europe/3x/europe.png
+    - assets/images/flag/flag.png
+    - assets/images/flag/2x/flag.png
+    - assets/images/flag/3x/flag.png
+    - assets/images/logo_white/logo_white.png
+    - assets/images/logo_white/2x/logo_white.png
+    - assets/images/logo_white/3x/logo_white.png
+    - assets/images/oceania/oceania.png
+    - assets/images/oceania/2x/oceania.png
+    - assets/images/oceania/3x/oceania.png
+    - assets/images/region/region.png
+    - assets/images/region/2x/region.png
+    - assets/images/region/3x/region.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -79,3 +107,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family: Quicksand
+      fonts:
+        - asset: assets/fonts/Quicksand-Bold.otf
+        - asset: assets/fonts/Quicksand-Regular.otf
