- add languages; - add navigation; - add menu item;

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_localizations:
+    sdk: flutter
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: 0.1.2
@@ -81,6 +84,8 @@ flutter:
     - assets/images/region/region.png
     - assets/images/region/2x/region.png
     - assets/images/region/3x/region.png
+    - assets/languages/en.json
+    - assets/languages/de.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
