--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   http: 0.12.0+2
   json_annotation: 3.0.0
   cached_network_image: 1.1.1
+  package_info: 0.4.0+6
 
 
 dev_dependencies:
